--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/x-date-pickers": "^6.18.0",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^2.30.0",
     "next": "14.0.4",
     "react": "^18",
